# web-framework-n-knocks

./: .editorconfig  .envrc  README.md  compose.db.yaml  open-api.yaml  web-frame.code-workspace
fast-api/: .gitignore  Dockerfile  Makefile  compose.yaml
fast-api/app/: Makefile
fast-api/app/docs/: setup.md
fast-api/src/: main.py  pyproject.toml
fast-api/src/db/: aws_service_dao.py  core.py  health_dao.py
init.db/: 01-create-database.dcl.sql  02-init-table.ddl.sql  03-init-data.dml.sql  README.md
node-js/: .env.local  .gitignore  README.md  compose.yaml  top.html
node-js/api/health/: handler.js
node-js/api/utils/: method-not-allow.js
node-js/app/: package-lock.json  package.json  server.js
node-js/app/api/: route.js
node-js/app/api/aws-service/: executer.js  handler.js  index.js
node-js/app/api/health/: executer.js  handler.js
node-js/app/api/utils/: request-parser.js  response.js
node-js/app/db/: connection.js  core.js
node-js/app/db/aws-service/: get-aws-service.js  (+3 more)
node-js/app/utils/: bad-request.js  request-parser.js  response.js  successfully.js
nuxt-js/: package-lock.json
nuxt-js/app/components/: AppHeader.vue
nuxt-js/server/plugin/: extend-html.ts
ruby-on-rails/: Dockerfile  Gemfile  README.md  article.md  compose.yaml  setup.md
ruby-on-rails/app/models/: aws_category.rb  aws_service.rb
ruby-on-rails/config/: credentials.yml.enc  database.yml  routes.rb
ruby-on-rails/config/environments/: development.rb
test/: 1-invoke-health.sh  2-post_aws-service-id.sh  3-get_aws-service-id.sh  4-list_aws-services.sh  core.sh
(+6 files in other folders)
